--- a/index.html
+++ b/index.html
@@ -21,24 +21,48 @@
         <img src="assets/images/logo.png" alt="logo" width="120" />
       </div>
     </header>
-    <div class="container">
-      <ul class="flex-ul">
-        <li>
-          <img src="assets/images/dslr-camera.png" alt="camera" width="24" />
-        </li>
-        <li>
-          <img src="assets/images/mic.png" alt="mic" width="24" />
-        </li>
-      </ul>
-      <h4 class="title-h4">
-        Please give access to your camera and microphone each tme it is
-        requested by <strong>kfw.verifeye.online</strong>.
-      </h4>
-      <ul class="flex-ul">
-        <li></li>
-        <li></li>
-      </ul>
-    </div>
+    <section>
+      <div class="container">
+        <ul class="flex-ul">
+          <li>
+            <img src="assets/images/dslr-camera.png" alt="camera" width="24" />
+          </li>
+          <li>
+            <img src="assets/images/mic.png" alt="mic" width="24" />
+          </li>
+        </ul>
+        <h4 class="title-h4">
+          Please give access to your camera and microphone each tme it is
+          requested by <strong>kfw.verifeye.online</strong>.
+        </h4>
+        <ul class="flex-ul">
+          <li>
+            <a href="" class="alert"
+              >Block<br /><img
+                src="assets/images/close.png"
+                alt="close"
+                width="26"
+              />
+            </a>
+          </li>
+          <li>
+            <a href="" class="success"
+              >Allow<br /><img
+                src="assets/images/check-mark.png"
+                alt="check-mark"
+                width="26"
+            /></a>
+          </li>
+        </ul>
+        <div class="proceed">
+          <a href="#" class="btn">Proceed</a>
+          <p>
+            Powered by<br />
+            <img src="assets/images/logo2.png" alt="logo2" width="100" />
+          </p>
+        </div>
+      </div>
+    </section>
     <link rel="stylesheet" href="assets/css/normalize.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <script
